Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjIntegerRetObject.quorum
class Main
    action Main
        integer one = 66
        Integer two
        two:SetValue(66)
        Yoda<integer, Integer, Object> yoda
        Object ret = yoda:useForce(one, two)
        output "passed"
     end
end
