Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjIntegerRetbooleanFail.quorum
class Main
    action Main
        integer one = 66
        Integer two
        two:SetValue(66)
        Yoda<integer, Integer, boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
